--- a/.env
+++ b/.env
@@ -30,3 +30,10 @@ MAILER_DSN=smtp://69c2c747a5213b:afe37d036bab1a@smtp.mailtrap.io:2525?encryption
 DATABASE_URL="mysql://root:@127.0.0.1:3306/game?serverVersion=5.7"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/mercure-bundle ###
+# See https://symfony.com/doc/current/mercure.html#configuration
+MERCURE_PUBLISH_URL=https://localhost/.well-known/mercure
+# The default token is signed with the secret key: 'TheMercureGamekey'
+MERCURE_JWT_TOKEN=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJtZXJjdXJlIjp7InB1Ymxpc2giOlsiKiJdfX0.EmJlIaOPLGaJUFB4idPuWoqUq91b85psOLJvGDDIYGk
+###< symfony/mercure-bundle ###
