--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "easycorp/easyadmin-bundle": "^3.2",
         "fzaninotto/faker": "^1.9",
         "knplabs/knp-paginator-bundle": "^5.4",
+        "lcobucci/jwt": "^4.1",
         "phpdocumentor/reflection-docblock": "^5.2",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "5.2.*",
@@ -27,6 +28,7 @@
         "symfony/http-client": "5.2.*",
         "symfony/intl": "5.2.*",
         "symfony/mailer": "5.2.*",
+        "symfony/mercure-bundle": "^0.2.6",
         "symfony/mime": "5.2.*",
         "symfony/monolog-bundle": "^3.1",
         "symfony/notifier": "5.2.*",
