--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -31,6 +31,7 @@ security:
             form_login:
                 login_path: adminLogin
                 check_path: adminLogin
+                default_target_path: /admin
 
             logout:
                 path: adminlogOut
